2010-07-26 H. Doreau <henri.doreau@gmail.com>
	* Topology.py: Decided to skip the topology tree generation phase. In
	place, we only build a complete connections graph that will be used
	for dynamic propagation. Also removed two unused and obsolete methods.
	* tests/TopologyTest.py: Updated the unit test suite for this module to
	deal with these major changes.
	* Propagation.py: Added the base implementation of the dynamic
	propagation tree, and routing mecanism for message passing within the
	propagation tree.
	* tests/PropagationTest.py: Added unit tests for the Propagation module.

2010-07-22 H. Doreau <henri.doreau@gmail.com>
	* Topology.py: Added network topology configuration parser and
	experimental tree generation code.
	* tests/TopologyTest.py: Added unit tests for network topology related
	code.

2010-07-21 S. Thiell <stephane.thiell@cea.fr>

	* Version 1.3 RC 2 released.

	* NodeSet.py: Like in some previous version, support None as argument for
	most methods (trac ticket #106).

2010-07-16 S. Thiell <stephane.thiell@cea.fr>

	* scripts/clush.py: Fix uncaught exceptions introduced in 1.3 RC 1 (trac
	ticket #105).

2010-07-12 S. Thiell <stephane.thiell@cea.fr>

	* Version 1.3 RC 1 released.

	* Task.py: Raise proper KeyError exception in Task.key_retcode(key) when
	key is not found in any finished workers (trac ticket #102).

2010-07-06 S. Thiell <stephane.thiell@cea.fr>

	* Task.py: Added documentation for reserved set_default() and set_info()
	keys (trac ticket #101).

	* scripts/clubak.py: Merge latest code display changes made on clush to
	clubak, including "--color={never,always,auto}" (trac ticket #89). Updated
	documentation accordingly.

2010-06-29 H. Doreau <henri.doreau@gmail.com>

	* Worker/Pdsh.py: removed obsolete _read() and _readerr() methods that
	overrode EngineClient methods without raising an EOFException when
	read() reads nothing (trac ticket #97).

2010-06-28 S. Thiell <stephane.thiell@cea.fr>
