@@ -58,7 +58,8 @@ import time
 from collections import deque
 
 from ClusterShell.NodeSet import NodeSet
-from ClusterShell.Topology import TopologyParser 
+from ClusterShell.Topology import TopologyParser
+
 
 
 class PropagationNode:
@@ -68,19 +69,19 @@ class PropagationNode:
     def __init__(self, name):
         """instance initialization"""
         self.name = name
-        self._tasks = deque()
-        # parent & children nodesets
+        self.job_queue = deque()
+        # parent and children nodesets
         self.parents = None
         self.children = None
 
     def _dbg(self, msg):
         """debug method: print sth out"""
-        print '%s: %s' % (self.name, msg)
-        #pass
+        #print '%s: %s' % (self.name, msg)
+        pass
 
     def __str__(self):
         """printable representation of the node"""
-        return self.name
+        return '%s (%d task(s) running)' % (self.name, len(self.job_queue))
 
 class CommunicatingNode(PropagationNode):
     """subclass that provides inter nodes communication code. both admin and
@@ -94,34 +95,42 @@ class CommunicatingNode(PropagationNode):
 
     def recv_message(self, msg):
         """this method is a stub to simulate communication between nodes"""
-        if msg['dst'] != self.name:
+        if msg.dst != self.name:
             raise InvalidMessageError(
                 'Received message at %s while destination set for %s' \
-                % (self.name, msg['dst']))
+                % (self.name, msg.dst))
 
-        self._dbg('received message from <%s>: %s' % (msg['src'] or
-            'anonymous', msg['str']))
+        self._dbg('received message: %s' % str(msg))
 
     def send_message(self, msg):
         """send a message to a directly connected node or to the next hop
         gateway for forwarding
         """
-        try:
-            dst = msg['dst']
-        except KeyError:
-            raise InvalidMessageError('Mandatory destination field not set')
+        dst = msg.dst
+        if dst is None:
+            data = msg.decode()
+            target = data['target']
 
-        if dst in self.children:
+            if target in self.children:
+                cmd = data['task']
+                self._dbg('Execute command %s on %s' % (cmd, target))
+            else:
+                self.resolver.next_hop(self.name, target).forward(msg)
+
+        elif dst in self.children:
             self.resolver.node(dst).recv_message(msg)
+
         else:
             self.resolver.next_hop(self.name, dst).forward(msg)
 
     def dst_invalidate(self, dst):
         """mark a route from self to dst as invalid"""
-        self.resolver.route_invalidate(self.name, dst)
+        self.resolver.mark_unreachable(dst)
 
 class AdminNode(CommunicatingNode):
-    """
+    """administration node. This kind of node is instanciated only once per
+    propagation tree. It is mainly charged to distribute tasks to the directly
+    connected gateways, perform retransmissions on failure and gather outputs
     """
 
 class GatewayNode(CommunicatingNode):
@@ -135,14 +144,12 @@ class GatewayNode(CommunicatingNode):
         self.job_counter = 0
 
     def forward(self, msg):
-        """
-        """
-        self._dbg('forwarding msg: <%s> to %s' % (msg, msg['dst']))
+        """process an incoming message not destinated to us"""
+        self._dbg('forwarding msg: <%s>' % str(msg))
         self.send_message(msg)
 
     def recv_message(self, msg):
-        """
-        """
+        """process an incoming message destinated to us"""
         CommunicatingNode.recv_message(self, msg)
         self.job_counter += 1
 
@@ -159,11 +166,12 @@ class PropagationTreeRouter:
     root -> leaves. For the other sense, a node just need to forward the message
     to one of its parent, as upward routes are convergent.
     """
-    # TODO : this might be put in the PropagationTree class
-    def __init__(self, nodes=None):
+    # TODO : this class might be put in the PropagationTree class
+    def __init__(self, fanout, nodes=None):
         """instance initialization"""
         self.nodes_table = nodes or {}
-        self._invalid_routes = {}
+        self.fanout = fanout
+        self._unreachable_hosts = NodeSet()
         self._cached_routes = {}
 
     def node(self, nodename):
@@ -178,23 +186,26 @@ class PropagationTreeRouter:
         the one with the least number of current jobs will be returned
         """
         # check for arguments validity
-        if not self.nodes_table.has_key(src) or not \
-            self.nodes_table.has_key(dst):
-            raise RoutesResolvingError('Invalid parameters %s -> %s' % (src,
-                dst))
+        if not self.nodes_table.has_key(src):
+            raise RoutesResolvingError('Invalid source: %s' % src)
+        if not self.nodes_table.has_key(dst):
+            raise RoutesResolvingError('Invalid destination: %s' % dst)
+
+        if dst in self._unreachable_hosts:
+            raise UnavailableDestinationError(
+                'Invalid destination %s, host is unreachable' % dst)
 
         # is the route already cached?
-        if self._cached_routes.has_key(dst):
-            if self._cached_routes[dst].has_key(src):
-                return self._cached_routes[dst][src]
+        nxt_hop = self._cache_lookup(src, dst)
+        if nxt_hop is not None:
+            return nxt_hop
 
-        # otherwise we'll find it out...
         src_inst = self.nodes_table[src]
         dst_current = dst
         while True:
             # start from the destination for efficiency
             dst_inst = self.nodes_table[dst_current]
-            ng = NodeSet.fromlist(dst_inst.parents)
+            ng = dst_inst.parents
             # compute the intersection between current node's parents and
             # source's children
             inter = src_inst.children & ng
@@ -207,34 +218,62 @@ class PropagationTreeRouter:
                 return nexthop
             else:
                 # iterate once again on the upper level
-                dst_current = ng[0]
+                valid_gw = ng - self._unreachable_hosts
+                if len(valid_gw) < 1:
+                    raise RoutesResolvingError('No route available to %s' % dst)
 
-    def route_invalidate(self, src, dst):
-        """mark the route from src to dst as invalid and don't announce it
-        anymore
+                dst_current = valid_gw[0]
+
+    def mark_unreachable(self, dst):
+        """mark node dst as unreachable and don't advertise routes through it
+        anymore. The cache will be updated only when necessary to avoid
+        performing expensive traversals.
         """
-        # TODO : update the cache!!
-        entry = self._invalid_routes.setdefault(dst, NodeSet())
-        entry.add(src)
+        # Simply mark dst as unreachable in a dedicated NodeSet. This list will
+        # be consulted by the resolution function and during cache access
+        self._unreachable_hosts.add(dst)
+
+    def _cache_lookup(self, src, dst):
+        """search for already known routes"""
+        if self._cached_routes.has_key(dst):
+            if self._cached_routes[dst].has_key(src):
+                nxt_hop = self._cached_routes[dst][src]
+                # does this route has been marked as invalid?
+                if nxt_hop.name in self._unreachable_hosts:
+                    # delete the entry and fin sth better
+                    del self._cached_routes[dst][src]
+                elif nxt_hop.job_counter < self.fanout:
+                    return nxt_hop
+        return None
 
     def _best_next_hop(self, candidates):
-        """
-        """
-        sorted_candidates = sorted(candidates,
-            key=lambda x: self.nodes_table[x].job_counter)
-        return sorted_candidates[0]
+        """find out a good next hop gateway"""
+        for host in candidates:
+            if host not in self._unreachable_hosts and \
+                self.nodes_table[host].job_counter < self.fanout:
+                # currently, the first one is the best
+                return host
+
+        raise RoutesResolvingError('No valid route to reach requested host')
+
 
 class PropagationTree:
+    """This class represents the complete propagation tree and provides the
+    ability to propagate tasks through it.
     """
-    """
-    def __init__(self, nodes=None):
-        """
-        """
-        self.nodes = nodes
+    def __init__(self):
+        """instance initialization"""
+        # list of available nodes, available by their name
+        self.nodes = {}
+        # name of the administration node, at the root of the tree
+        self.admin = ''
+        # destination nodeset
+        self.targets = None
+        # selected fanout => maximum arity of the tree
+        self.fanout = None
 
     def __str__(self):
-        """
-        """
+        """printable representation of the tree"""
         return '\n'.join(['%s: %s' % (str(k), str(v)) for k, v in
             self.nodes.iteritems()])
 
@@ -243,23 +282,28 @@ class PropagationTree:
         nodeset and the selected fanout.
         """
         self.nodes = {}
-        dst_nodeset = NodeSet(nodeset)
-        router = PropagationTreeRouter()
+        self.targets = NodeSet(nodeset)
+        self.fanout = fanout
+        router = PropagationTreeRouter(fanout)
         # --- generate one specialized instance per node --- #
         for nodegroup in topology_tree:
             group_key = str(nodegroup.nodeset)
             if nodegroup.parent is None:
+                # Admin node (no parents)
                 curr = AdminNode(group_key, router)
                 curr.children = nodegroup.children_ns()
                 self.nodes[group_key] = curr
+                self.admin = group_key
             elif nodegroup.children_len() == 0:
-                ns_util = nodegroup.nodeset & dst_nodeset
+                # Edge node (no children)
+                ns_util = nodegroup.nodeset & self.targets
                 for node in ns_util:
                     node_key = str(node)
                     curr = EdgeNode(node_key)
                     curr.parents = nodegroup.parent.nodeset
                     self.nodes[node_key] = curr
             else:
+                # Gateway node (no other possibility)
                 for node in nodegroup.nodeset:
                     node_key = str(node)
                     curr = GatewayNode(node_key, router)
@@ -270,36 +314,53 @@ class PropagationTree:
         # --- instanciate and return the actual tree --- #
         router.nodes_table = self.nodes
 
-class RoutesResolvingError(Exception):
-    """error raised on invalid conditions during routing operations"""
+    def execute(self, cmd):
+        """execute `cmd' on the nodeset specified at loading"""
+        admin = self.nodes[self.admin]
+        for sub_nodeset in self.targets.split(self.fanout):
+            # a fanout > number of available targets will ends with a zero
+            # length sub_nodeset
+            if len(sub_nodeset) > 0:
+                msg = PropagationMessage()
+                msg.src = admin.name
+                msg.add_info('target', str(sub_nodeset))
+                msg.add_info('task', cmd)
+                admin.send_message(msg)
+
+class PropagationMessage:
+    """message to a node. This is just a stub"""
+    # this class variable is used to uniquely identify each message
+    class_counter = 0
+
+    def __init__(self):
+        """
+        """
+        self.src = None
+        self.dst = None
+        self._infos = {}
+        PropagationMessage.class_counter += 1
+        self._msg_id = PropagationMessage.class_counter
+
+    def decode(self):
+        """return raw data, as a dictionnary"""
+        return self._infos
+
+    def add_info(self, key, arg):
+        """add a key/value couple to the message"""
+        self._infos[key] = arg
+
+    def __str__(self):
+        """printable summary of the message"""
+        return 'message #%d: %s -> %s' % (self._msg_id, self.src, self.dst)
 
 class InvalidMessageError(Exception):
     """error raised on performing operations on invalid messages"""
 
-class PropagationMessage:
-    """message to a node. This is just a stub"""
-    def __init__(self):
-        """
-        """
-        self._infos = {}
+class RoutesResolvingError(Exception):
+    """error raised on invalid conditions during routing operations"""
 
-    def __getitem__(self, i):
-        """
-        """
-        try:
-            return self._infos[i]
-        except KeyError:
-            return None
-
-    def __setitem__(self, i, y):
-        """
-        """
-        self._infos[i] = y
-
-    def __str__(self):
-        """printable summary of the message"""
-        return ', '.join(['%s: %s' % (k, str(v)) for k, v in \
-            self._infos.iteritems()])
+class UnavailableDestinationError(RoutesResolvingError):
+    """error raised on trynig to reach a host already marked as unreachable"""
 
 
 if __name__ == '__main__':
@@ -308,8 +369,8 @@ if __name__ == '__main__':
     before = time.time()
     parser = TopologyParser()
     parser.load(sys.argv[1])
-    admin = sys.argv[2]
-    topology = parser.tree(admin)
+    admin_hostname = sys.argv[2]
+    topology = parser.tree(admin_hostname)
     print '[!] Generating topology tree: %f s' % (time.time() - before)
 
     before = time.time()
@@ -318,19 +379,19 @@ if __name__ == '__main__':
     print '[!] Loading propagation tree: %f s' % (time.time() - before)
 
     message = PropagationMessage()
-    message['src'] = admin
-    message['dst'] = 'STB1564'
-    message['str'] = 'Hello, world!'
+    message.src = admin_hostname
+    message.dst = 'STB1564'
+    message.add_info('str', 'Hello, world!')
 
     before = time.time()
-    ptree.nodes[admin].send_message(message)
+    ptree.nodes[admin_hostname].send_message(message)
     print '[!] Sending message through the propagation tree: %f s' \
         % (time.time() - before)
 
-    message['str'] = 'Hello, world, again!'
+    message.add_info('str', 'Hello, world, again!')
 
     before = time.time()
-    ptree.nodes[admin].send_message(message)
+    ptree.nodes[admin_hostname].send_message(message)
     print '[!] Sending message through the propagation tree: %f s' \
         % (time.time() - before)
 
